--- a/scripts/prepdoc.ipynb
+++ b/scripts/prepdoc.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,6 +155,7 @@
        "      <th>path</th>\n",
        "      <th>topic_value</th>\n",
        "      <th>content</th>\n",
+       "      <th>is_noisy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -167,6 +168,18 @@
        "      <td>https://clic.org.hk/en/topics/PoliceAndCrimina...</td>\n",
        "      <td>Police &amp; Criminal Procedure</td>\n",
        "      <td>&lt;h2&gt;I. Criminal liability and types of penalti...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Index</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Criminal records and the Rehabilitation of Off...</td>\n",
+       "      <td>https://clic.org.hk/en/topics/PoliceAndCrimina...</td>\n",
+       "      <td>Police &amp; Criminal Procedure</td>\n",
+       "      <td>&lt;h2&gt;II. Criminal records and the Rehabilitatio...</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -177,41 +190,32 @@
        "      <td>https://clic.org.hk/en/topics/PoliceAndCrimina...</td>\n",
        "      <td>Police &amp; Criminal Procedure</td>\n",
        "      <td>&lt;h2&gt;III. Police powers&lt;/h2&gt; &lt;p&gt;As an ordinary ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>49</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>E-package: DIY Residential Tenancy Agreement</td>\n",
-       "      <td>https://clic.org.hk/en/topics/DIY_Residential_...</td>\n",
-       "      <td>E-package: DIY Residential Tenancy Agreement</td>\n",
-       "      <td>&lt;h2&gt;E-package: DIY Residential Tenancy Agreeme...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    nid type  is_complete                                         title  \\\n",
-       "0     8  NaN         True     Criminal liability and types of penalties   \n",
-       "2    10  NaN         True                                 Police powers   \n",
-       "10   49  NaN         True  E-package: DIY Residential Tenancy Agreement   \n",
+       "   nid   type  is_complete                                              title  \\\n",
+       "0    8    NaN         True          Criminal liability and types of penalties   \n",
+       "1    9  Index        False  Criminal records and the Rehabilitation of Off...   \n",
+       "2   10    NaN         True                                      Police powers   \n",
        "\n",
-       "                                                 path  \\\n",
-       "0   https://clic.org.hk/en/topics/PoliceAndCrimina...   \n",
-       "2   https://clic.org.hk/en/topics/PoliceAndCrimina...   \n",
-       "10  https://clic.org.hk/en/topics/DIY_Residential_...   \n",
+       "                                                path  \\\n",
+       "0  https://clic.org.hk/en/topics/PoliceAndCrimina...   \n",
+       "1  https://clic.org.hk/en/topics/PoliceAndCrimina...   \n",
+       "2  https://clic.org.hk/en/topics/PoliceAndCrimina...   \n",
        "\n",
-       "                                     topic_value  \\\n",
-       "0                    Police & Criminal Procedure   \n",
-       "2                    Police & Criminal Procedure   \n",
-       "10  E-package: DIY Residential Tenancy Agreement   \n",
+       "                   topic_value  \\\n",
+       "0  Police & Criminal Procedure   \n",
+       "1  Police & Criminal Procedure   \n",
+       "2  Police & Criminal Procedure   \n",
        "\n",
-       "                                              content  \n",
-       "0   <h2>I. Criminal liability and types of penalti...  \n",
-       "2   <h2>III. Police powers</h2> <p>As an ordinary ...  \n",
-       "10  <h2>E-package: DIY Residential Tenancy Agreeme...  "
+       "                                             content  is_noisy  \n",
+       "0  <h2>I. Criminal liability and types of penalti...     False  \n",
+       "1  <h2>II. Criminal records and the Rehabilitatio...      True  \n",
+       "2  <h2>III. Police powers</h2> <p>As an ordinary ...     False  "
       ]
      },
      "execution_count": 5,
@@ -225,12 +229,22 @@
     "df.drop(index=rows_to_remove, inplace=True)\n",
     "df.dropna(subset=[\"title\", \"content\", \"topic_value\"], inplace=True) \n",
     "df.drop(index=df[~df[\"path\"].str.contains(\"topics/\")].index, inplace=True)              # filter out announcement pages\n",
-    "df.drop(index=df[df[\"type\"] == \"Index\"].index, inplace=True)                                # filter out index pages\n",
+    "\n",
+    "# df.drop(index=df[df[\"type\"] == \"Index\"].index, inplace=True)                              # filter out index pages\n",
+    "df[\"is_noisy\"] = df[\"type\"] == \"Index\"  # Mark noisy pages\n",
+    "\n",
     "df.drop(index=df[df[\"type\"] == \"Delete\"].index, inplace=True)                               # filter out deleted pages\n",
     "df['nid'] = df['nid'].astype(int)                                                     # Convert 'nid' to int\n",
     "df['is_complete'] = df['is_complete'].fillna(0).astype(bool)                    # Convert 'is_complete' to boolean (1.0 -> True, NaN/0.0 -> False)\n",
     "df.head(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -242,19 +256,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 2319 entries, 0 to 2606\n",
-      "Data columns (total 7 columns):\n",
+      "Index: 2541 entries, 0 to 2637\n",
+      "Data columns (total 8 columns):\n",
       " #   Column       Non-Null Count  Dtype \n",
       "---  ------       --------------  ----- \n",
-      " 0   nid          2319 non-null   int64 \n",
-      " 1   type         90 non-null     object\n",
-      " 2   is_complete  2319 non-null   bool  \n",
-      " 3   title        2319 non-null   object\n",
-      " 4   path         2319 non-null   object\n",
-      " 5   topic_value  2319 non-null   object\n",
-      " 6   content      2319 non-null   object\n",
-      "dtypes: bool(1), int64(1), object(5)\n",
-      "memory usage: 129.1+ KB\n"
+      " 0   nid          2541 non-null   int64 \n",
+      " 1   type         312 non-null    object\n",
+      " 2   is_complete  2541 non-null   bool  \n",
+      " 3   title        2541 non-null   object\n",
+      " 4   path         2541 non-null   object\n",
+      " 5   topic_value  2541 non-null   object\n",
+      " 6   content      2541 non-null   object\n",
+      " 7   is_noisy     2541 non-null   bool  \n",
+      "dtypes: bool(2), int64(1), object(5)\n",
+      "memory usage: 143.9+ KB\n"
      ]
     }
    ],
@@ -302,6 +317,7 @@
        "      <th>path</th>\n",
        "      <th>topic_value</th>\n",
        "      <th>content</th>\n",
+       "      <th>is_noisy</th>\n",
        "      <th>topic_key</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -315,6 +331,19 @@
        "      <td>https://clic.org.hk/en/topics/PoliceAndCrimina...</td>\n",
        "      <td>Police &amp; Criminal Procedure</td>\n",
        "      <td>&lt;h2&gt;I. Criminal liability and types of penalti...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>PoliceAndCriminalProcedure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Index</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Criminal records and the Rehabilitation of Off...</td>\n",
+       "      <td>https://clic.org.hk/en/topics/PoliceAndCrimina...</td>\n",
+       "      <td>Police &amp; Criminal Procedure</td>\n",
+       "      <td>&lt;h2&gt;II. Criminal records and the Rehabilitatio...</td>\n",
+       "      <td>True</td>\n",
        "      <td>PoliceAndCriminalProcedure</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -326,48 +355,38 @@
        "      <td>https://clic.org.hk/en/topics/PoliceAndCrimina...</td>\n",
        "      <td>Police &amp; Criminal Procedure</td>\n",
        "      <td>&lt;h2&gt;III. Police powers&lt;/h2&gt; &lt;p&gt;As an ordinary ...</td>\n",
+       "      <td>False</td>\n",
        "      <td>PoliceAndCriminalProcedure</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>49</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>E-package: DIY Residential Tenancy Agreement</td>\n",
-       "      <td>https://clic.org.hk/en/topics/DIY_Residential_...</td>\n",
-       "      <td>E-package: DIY Residential Tenancy Agreement</td>\n",
-       "      <td>&lt;h2&gt;E-package: DIY Residential Tenancy Agreeme...</td>\n",
-       "      <td>DIY_Residential_Tenancy_Agreement</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    nid type  is_complete                                         title  \\\n",
-       "0     8  NaN         True     Criminal liability and types of penalties   \n",
-       "2    10  NaN         True                                 Police powers   \n",
-       "10   49  NaN         True  E-package: DIY Residential Tenancy Agreement   \n",
+       "   nid   type  is_complete                                              title  \\\n",
+       "0    8    NaN         True          Criminal liability and types of penalties   \n",
+       "1    9  Index        False  Criminal records and the Rehabilitation of Off...   \n",
+       "2   10    NaN         True                                      Police powers   \n",
        "\n",
-       "                                                 path  \\\n",
-       "0   https://clic.org.hk/en/topics/PoliceAndCrimina...   \n",
-       "2   https://clic.org.hk/en/topics/PoliceAndCrimina...   \n",
-       "10  https://clic.org.hk/en/topics/DIY_Residential_...   \n",
+       "                                                path  \\\n",
+       "0  https://clic.org.hk/en/topics/PoliceAndCrimina...   \n",
+       "1  https://clic.org.hk/en/topics/PoliceAndCrimina...   \n",
+       "2  https://clic.org.hk/en/topics/PoliceAndCrimina...   \n",
        "\n",
-       "                                     topic_value  \\\n",
-       "0                    Police & Criminal Procedure   \n",
-       "2                    Police & Criminal Procedure   \n",
-       "10  E-package: DIY Residential Tenancy Agreement   \n",
+       "                   topic_value  \\\n",
+       "0  Police & Criminal Procedure   \n",
+       "1  Police & Criminal Procedure   \n",
+       "2  Police & Criminal Procedure   \n",
        "\n",
-       "                                              content  \\\n",
-       "0   <h2>I. Criminal liability and types of penalti...   \n",
-       "2   <h2>III. Police powers</h2> <p>As an ordinary ...   \n",
-       "10  <h2>E-package: DIY Residential Tenancy Agreeme...   \n",
+       "                                             content  is_noisy  \\\n",
+       "0  <h2>I. Criminal liability and types of penalti...     False   \n",
+       "1  <h2>II. Criminal records and the Rehabilitatio...      True   \n",
+       "2  <h2>III. Police powers</h2> <p>As an ordinary ...     False   \n",
        "\n",
-       "                            topic_key  \n",
-       "0          PoliceAndCriminalProcedure  \n",
-       "2          PoliceAndCriminalProcedure  \n",
-       "10  DIY_Residential_Tenancy_Agreement  "
+       "                    topic_key  \n",
+       "0  PoliceAndCriminalProcedure  \n",
+       "1  PoliceAndCriminalProcedure  \n",
+       "2  PoliceAndCriminalProcedure  "
       ]
      },
      "execution_count": 7,
@@ -401,20 +420,20 @@
     {
      "data": {
       "text/plain": [
-       "array(['PoliceAndCriminalProcedure', 'DIY_Residential_Tenancy_Agreement',\n",
-       "       'Redevelopment_and_Acquisition_of_Property',\n",
-       "       'saleAndPurchaseOfProperty', 'Competition_Law',\n",
-       "       'FreedomOfAssemblyProcessionDemonstration', 'hkLegalSystem', 'ADR',\n",
-       "       'civilCase', 'legalAid', 'personalInjuries',\n",
+       "array(['PoliceAndCriminalProcedure', 'hkLegalSystem', 'ADR', 'civilCase',\n",
+       "       'legalAid', 'personalInjuries',\n",
        "       'bankruptcy_IndividualVoluntaryArrangement_Companies_Winding_up',\n",
-       "       'familyMatrimonialAndCohabitation', 'enduring_Powers_of_Attorney',\n",
-       "       'probate', 'taxation', 'personalDataPrivacy', 'insurance',\n",
+       "       'enduring_Powers_of_Attorney', 'DIY_Residential_Tenancy_Agreement',\n",
+       "       'Maintenance_and_safety_of_property', 'landlord_tenant',\n",
+       "       'Redevelopment_and_Acquisition_of_Property',\n",
+       "       'saleAndPurchaseOfProperty', 'probate', 'taxation', 'insurance',\n",
+       "       'Medical_treatment_consent_and_withdrawal', 'medicalNegligence',\n",
+       "       'sexual_offences', 'traffic_law', 'immigration', 'Competition_Law',\n",
+       "       'businessAndCommerce', 'employmentDisputes',\n",
+       "       'intellectualProperty', 'FreedomOfAssemblyProcessionDemonstration',\n",
+       "       'familyMatrimonialAndCohabitation', 'personalDataPrivacy',\n",
        "       'protectionForInvestorsAndStructuredProducts',\n",
        "       'consumer_complaints', 'antiDiscrimination', 'defamation',\n",
-       "       'Medical_treatment_consent_and_withdrawal', 'medicalNegligence',\n",
-       "       'businessAndCommerce', 'sexual_offences', 'intellectualProperty',\n",
-       "       'traffic_law', 'immigration', 'employmentDisputes',\n",
-       "       'Maintenance_and_safety_of_property', 'landlord_tenant',\n",
        "       'offences_related_to_dangerous_drugs', 'judicial_review',\n",
        "       'consumerCredit', 'OffencesAgainstThePerson', 'Evidence'],\n",
        "      dtype=object)"
@@ -484,7 +503,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of questions: 1404, out of 2319 total rows.\n"
+      "Number of questions: 1414, out of 2541 total rows.\n"
      ]
     }
    ],
@@ -576,8 +595,8 @@
       "                   topic_value  \\\n",
       "0  Police & Criminal Procedure   \n",
       "\n",
-      "                                             content  \\\n",
-      "0  <h2>I. Criminal liability and types of penalti...   \n",
+      "                                             content  is_noisy  \\\n",
+      "0  <h2>I. Criminal liability and types of penalti...     False   \n",
       "\n",
       "                    topic_key  is_question                      context  \\\n",
       "0  PoliceAndCriminalProcedure        False  Police & Criminal Procedure   \n",
@@ -604,6 +623,34 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_URL = f\"https://clic.org.hk/{LANGUAGE_CODE.lower()}/topics/\"\n",
+    "def find_new_path(path: str, retries=0) -> str:\n",
+    "    '''\n",
+    "    For some pages the path has changed, but some hyperlinks still point to the old path.\n",
+    "    This function finds the new URL based on the old path.\n",
+    "    '''\n",
+    "    if not isinstance(path, str):\n",
+    "        return None\n",
+    "    url = BASE_URL + path\n",
+    "    try:\n",
+    "        response = requests.get(url, timeout=5, allow_redirects=True)\n",
+    "        if response.status_code in [200, 301]:\n",
+    "            # print(f\"Found new path for {path}: {response.url}\")\n",
+    "            return response.url.split('/topics/')[1].strip() if '/topics/' in response.url else None\n",
+    "        else:\n",
+    "            raise requests.RequestException(f\"Failed to fetch {url}: {response.status_code}\")\n",
+    "    except requests.RequestException:\n",
+    "        if retries < 3:\n",
+    "            return find_new_path(path, retries + 1)\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +703,15 @@
     "            page_path = page_path.split('/topics/')[1].strip()\n",
     "            if page_path.endswith('/'):\n",
     "                page_path = page_path[:-1]\n",
+    "\n",
+    "            # Find the corresponding nid in the DataFrame\n",
     "            page_nids = df[df['path'].str.endswith(page_path)]['nid'].values\n",
+    "            if len(page_nids) == 0:\n",
+    "                # If no nid found, try to find the new URL\n",
+    "                new_url = find_new_path(page_path)\n",
+    "                if new_url:\n",
+    "                    page_nids = df[df['path'].str.endswith(new_url)]['nid'].values\n",
+    "\n",
     "            clic.append({\n",
     "                'nid': page_nids[0] if len(page_nids) > 0 else None,\n",
     "                'path': '/topics/' + page_path.strip(),\n",
@@ -676,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,17 +742,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of long texts (more than 1024 tokens): 139\n",
-      "Number of long texts (more than 512 tokens): 501\n",
-      "Number of long texts (more than 256 tokens): 1120\n",
-      "Number of short texts (less than 12 tokens): 5\n"
+      "Number of long texts (more than 1024 tokens): 141\n",
+      "Number of long texts (more than 512 tokens): 504\n",
+      "Number of long texts (more than 256 tokens): 1125\n",
+      "Number of short texts (less than 12 tokens): 208\n"
      ]
     }
    ],
@@ -717,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
